--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ title: Home
     {{ post.content }}
   </div>
 
+  {% unless paginator.previous_page %}
   <h2 id="comments">Comments</h2>
 
   <div id="disqus_thread"></div>
@@ -36,6 +37,7 @@ title: Home
       })();
   </script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+  {% endunless %}
   {% endfor %}
 
   {% for post in paginator.posts offset:1 %}
