--- a/search.html
+++ b/search.html
@@ -23,5 +23,5 @@ layout: default
     {% endfor %}
   };
 </script>
-<script src="{{ site.baseurl }}/public/js/lundr.min.js"></script>
+<script src="{{ site.baseurl }}/public/js/lunr.min.js"></script>
 <script src="{{ site.baseurl }}/public/js/search.js"></script>
