--- a/search.html
+++ b/search.html
@@ -12,12 +12,12 @@ layout: default
 <script>
   window.store = {
     {% for post in site.posts %}
-      "{{ post.url | slugify }}": {
+      "{{ site.baseurl | slugify }}{{ post.url | slugify }}": {
         "title": "{{ post.title | xml_escape }}",
         "author": "{{ post.author | xml_escape }}",
         "category": "{{ post.category | xml_escape }}",
         "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-        "url": "{{ post.url | xml_escape }}"
+        "url": "{{ site.baseurl | xml_escape }}{{ post.url | xml_escape }}"
       }
       {% unless forloop.last %},{% endunless %}
     {% endfor %}
