--- a/beamer.html
+++ b/beamer.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<div id="beamer-content"></div>
+<div id="beamer-content">
+	<p>Beamer</p>
+</div>
 <script>
 	var beamer_config = {
 		selector : "beamer-content", //REPLACE: Your element Id to position the alert
