--- a/beamer.html
+++ b/beamer.html
@@ -1,9 +1,7 @@
 ---
 layout: default
 ---
-<div id="beamer-content">
-	<p>Beamer</p>
-</div>
+<span id="beamer-content" style="cursor:pointer;">New features</span>
 <script>
 	var beamer_config = {
 		selector : "beamer-content", //REPLACE: Your element Id to position the alert
