--- a/search.html
+++ b/search.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+title: Search
 ---
 <form action="{{ site.baseurl }}/search.html" method="get">
   <label for="search-box">Search</label>
