--- a/beamer.html
+++ b/beamer.html
@@ -2,13 +2,13 @@
 layout: default
 title: Beamer
 ---
-<span id="beamer-content" style="cursor:pointer;">New features</span>
+<span id="beamer-content" style="cursor:pointer;width:120%;">What's new?</span>
 <script>
 	var beamer_config = {
 		selector : "beamer-content", //REPLACE: Your element Id to position the alert
 		product_id : "DffMqhlA369", //DO NOT CHANGE: This is your product code on Beamer
-		//top: 0, //Optional: Top position offset
-		//right: 0, //Optional: Right position offset
+		top: 0, //Optional: Top position offset
+		right: 0, //Optional: Right position offset
 		//language: 'EN', //Optional: Bring news in the language of choice
 		//filter: 'admin', //Optional : Bring the news for a certain role as well as all the public news
 		//lazy: false, //Optional : true if you want to manually start the script calling Beamer.init()
@@ -17,4 +17,3 @@ title: Beamer
 	};
 </script>
 <script type="text/javascript" src="https://app.getbeamer.com/js/beamer-embed.js"></script>
-					
