--- a/beamer.html
+++ b/beamer.html
@@ -2,7 +2,7 @@
 layout: default
 title: Beamer
 ---
-<div id="beamer-content" style="width:150px"><span style="cursor:pointer">What's new?</span></div>
+<span id="beamer-content" style="cursor:pointer">What's new?</span>
 <script>
 	var beamer_config = {
 		selector : "beamer-content", //REPLACE: Your element Id to position the alert
